# TCLB_tools

./: .gitignore  README.md
.circleci/: config.yml
ADIOS2/: Makefile  ReadHDF5.ipynb  ReadTomographyRAWswapX_Z  adios.xml  configure
ADIOS2/src/: ReadTomographyRAW.cpp  ReadTomographyRAWswapX_Z.cpp  config.mk.in  configure.ac
Examples_And_Papers/: README.md
Examples_And_Papers/on_recovering_2nd_order_convergence_of_LBM_with_reaction_type_source_terms/: README.md  process_df_dense2sparse.py  process_df_sparse2dense.py  run2D_AC_scalling_dense2sparse.py  run2D_AC_scalling_sparse2dense.py
Examples_And_Papers/on_recovering_2nd_order_convergence_of_LBM_with_reaction_type_source_terms/experimental/: fft_img.R  readme.txt  run2D_AC_same_SI_time.py  run2D_heat_eq.py  sample_logplots.py
Examples_And_Papers/on_recovering_2nd_order_convergence_of_LBM_with_reaction_type_source_terms/requires_clean_up/: run0D_AC.py  run1D_AC_proper_scalling.py
Examples_And_Papers/wip_LBM_For_AC_2020/: A-C-classical.ipynb  README.md  dft_test.py  magic_parameter_plot  magic_parameter_plot.py  proces_df_dense2sparse.py  process_df_sparse2dense.py  run0D_AC.py  run0D_AC_v2.py  run1D_AC.py  run1D_AC_AD2D.py  run1D_AC_acoustic_scalling.py  run1D_AC_diffusive_scalling.py  run1D_AC_proper_scalling.py  run2D_AC_proper_scalling.py  run2D_AC_proper_scalling_dense2sparse.py  run2D_AC_proper_scalling_sparse2dense.py  run2D_AC_same_SI_time.py  run2D_heat_eq.py
Python/: CallPythonHandler.py  run2D_AC.py  run_diffusion_GaussianHill.py
Python/CLB/: CLBXMLHandler.py  CLBXMLWriter.py  CallPythonHelper.py  VTICompressor.py  VTIFile.py  VoxelizedInput.py  __init__.py
Python/examples/: d2q9_pf_with_console.xml
Python/symbolic_tools/: requirements.txt  setup.py
Python/symbolic_tools/Benchmarks/: EstimateSimulationPerformance.py
Python/symbolic_tools/ConvergenceStudy/: grid_convergence_laplace2d.py  grid_log_convergence_laplace2d.py  plot_1Dsquare_anal_vs_num_Neumann.py  plot_laplace2D_anal_vs_num.py
Python/symbolic_tools/DataIO/: VTIFile.py  example_pandas_txt_reader.py  example_vedo_3d_volume.py  example_vti_reader.py  helpers.py
Python/symbolic_tools/Plotting_samples/: SAMPLE_LOG_PLOT_2D.py  (+9 more)
R/TCLBtools/: DESCRIPTION
(+290 files in other folders)
